Fix link tag overflow

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -212,6 +212,7 @@ nav ul a:hover, nav ul .active {
 .projects-section a {
   text-decoration: none;
   color: rgb(214, 90, 49);
+  display: block;
   text-overflow: ellipsis;
 }
 .projects-section p {
